--- a/templates/404.html
+++ b/templates/404.html
@@ -1,5 +1,7 @@
 {% extends "sanjog/header.html" %}
-
+{% block title %}
+<meta name="robots" content="noindex">
+{% endblock %}
 {% block content %}
 
 {% load static %}
