--- a/templates/ajax/categorypage.html
+++ b/templates/ajax/categorypage.html
@@ -106,10 +106,10 @@
                                         </select>
                                     </div>
                                     <div class="toolbox-item toolbox-layout d-none">
-                                        <a href="shop-banner-sidebar.html" class="icon-mode-grid btn-layout active">
+                                        <a href="/" class="icon-mode-grid btn-layout active">
                                             <i class="w-icon-grid"></i>
                                         </a>
-                                        <a href="shop-list.html" class="icon-mode-list btn-layout">
+                                        <a href="#" class="icon-mode-list btn-layout">
                                             <i class="w-icon-list"></i>
                                         </a>
                                     </div>
