--- a/templates/perm.html
+++ b/templates/perm.html
@@ -208,7 +208,7 @@
 											<span>Total</span>
 											<span class="total-amount">$134.00</span>
 										</div>
-										<a href="checkout.html" class="btn animate">Checkout</a>
+										<a href="#" class="btn animate">Checkout</a>
 									</div>
 								</div>
 								
@@ -247,10 +247,10 @@
 												<!--li><a href="#">Shop<i class="ti-angle-down"></i><span class="new">New</span></a>
 													<ul class="dropdown">
 														<li><a href="shop-grid.html">Shop Grid</a></li>
-														<li><a href="shop-list.html">Shop List</a></li>
+														<li><a href="#">Shop List</a></li>
 														<li><a href="shop-single.html">shop Single</a></li>
-														<li><a href="cart.html">Cart</a></li>
-														<li><a href="checkout.html">Checkout</a></li>
+														<li><a href="#">Cart</a></li>
+														<li><a href="#">Checkout</a></li>
 													</ul>
 												</li-->
 											</ul>
