--- a/templates/sanjog/about.html
+++ b/templates/sanjog/about.html
@@ -68,7 +68,7 @@
                         We are committed to providing a user-friendly platform that helps businesses of all sizes connect with potential clients in Nepal. Thank you for choosing our online B2B marketplace as your go-to destination for your business needs."
 
                     </p>
-                    <a href="login.html" class="button-slide">
+                    <a href="#" class="button-slide">
                         <span class="btn-text">Join Our Community</span>
                         <span class="btn-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21px" height="10px">
@@ -301,7 +301,7 @@
                     <div class="content-box">
                         <h2 class="item-title">Vistaar Makes Your Life Easier &amp; Simple</h2>
                         <p>Aliquam lorem ante dapibus in viverra quis feugiat atellu Peaselus vierra nullaut metus varius laoreet unknown printer took scrambled make.</p>
-                        <a href="about-us.html" class="button-slide">
+                        <a href="#" class="button-slide">
                             <span class="btn-text">Read More</span>
                             <span class="btn-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21px" height="10px">
