--- a/templates/sanjog/header.html
+++ b/templates/sanjog/header.html
@@ -10,6 +10,10 @@
 
     <meta property="og:url" content="https://vistaartrade.com/" />
     <meta property="og:type" content="website" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://activeitzone.com">
+    <link rel="preconnect" href="https://maxcdn.bootstrapcdn.com">
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
     <meta name="" content="IE=edge,chrome=1" />
@@ -27,7 +31,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{% static "logo_favicon.png" %}">
+    <link rel="icon" type="image/png" href="{% static "logo.webp" %}">
 
     <!-- WebFont.js -->
     <!-- <script> -->
@@ -164,7 +168,7 @@
                                 <div class="products">
                                     <div class="product product-cart">
                                         <div class="product-detail">
-                                            <a href="categorypage.html" class="product-name">Beige knitted
+                                            <a # class="product-name">Beige knitted
                                                 elas<br>tic
                                                 runner shoes</a>
                                             <div class="price-box">
@@ -173,7 +177,7 @@
                                             </div>
                                         </div>
                                         <figure class="product-media">
-                                            <a href="categorypage.html">
+                                            <a href="#">
                                                 <img src="assets/images/cart/product-1.jpg" alt="product" height="84"
                                                     width="94" />
                                             </a>
@@ -185,7 +189,7 @@
 
                                     <div class="product product-cart">
                                         <div class="product-detail">
-                                            <a href="categorypage.html" class="product-name">Blue utility
+                                            <a # class="product-name">Blue utility
                                                 pina<br>fore
                                                 denim dress</a>
                                             <div class="price-box">
@@ -194,7 +198,7 @@
                                             </div>
                                         </div>
                                         <figure class="product-media">
-                                            <a href="categorypage.html">
+                                            <a href="#">
                                                 <img src="assets/images/cart/product-2.jpg" alt="product" width="84"
                                                     height="94" />
                                             </a>
@@ -211,8 +215,8 @@
                                 </div>
 
                                 <div class="cart-action">
-                                    <a href="cart.html" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
-                                    <a href="checkout.html" class="btn btn-primary  btn-rounded">Checkout</a>
+                                    <a href="#" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
+                                    <a href="#" class="btn btn-primary  btn-rounded">Checkout</a>
                                 </div>
                             </div-->
                             <!-- End of Dropdown Box -->
@@ -270,7 +274,7 @@
                                                                     class="text-primary text-uppercase">20%Off</strong>
                                                             </div>
                                                             <h3 class="banner-title ls-normal">Hot Sales</h3>
-                                                            <a href="shop-banner-sidebar.html"
+                                                            <a href="/"
                                                                 class="btn btn-dark btn-sm btn-link btn-slide-right btn-icon-right">
                                                                 Shop Now<i class="w-icon-long-arrow-right"></i>
                                                             </a>
@@ -471,8 +475,8 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-12 order-1 order-lg-0 mt-0 mt-lg-n5">
                         <div class="widget widget-about row">
-                            <a href="demo1.html" class="logo-footer col-12 col-sm-6 col-lg-12">
-                                <img src="http://vistaartrade.com/static/images/logo.png" alt="logo-footer" width="144"
+                            <a href="/" class="logo-footer col-12 col-sm-6 col-lg-12">
+                                <img src="https://vistaartrade.com/static/images/logo.png" alt="logo-footer" width="144"
                                     height="45" />
                             </a>
                             <div class="widget-body col-12 col-sm-auto col-lg-12">
@@ -690,7 +694,7 @@
 
     <!-- Start of Scroll Top -->
     <a id="scroll-top" class="scroll-top d-none" href="#top" title="Top" role="button"> <i class="w-icon-angle-up"></i> <svg
-            version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70 70">
+            version="1.1" xmlns="https://www.w3.org/2000/svg" viewBox="0 0 70 70">
             <circle id="progress-indicator" fill="transparent" stroke="#000000" stroke-miterlimit="10" cx="35" cy="35"
                 r="34" style="stroke-dasharray: 16.4198, 400;"></circle>
         </svg> </a>
@@ -993,10 +997,10 @@
                       <div class="swiper mySwiper">
                         <div class="swiper-wrapper">
                           <div class="swiper-slide">
-                            <img src="http://vistaartrade.com/media/products/2021/12/30/Clever_Cat_Snail_Bb_Cream.jpg">
+                            <img src="https://vistaartrade.com/media/products/2021/12/30/Clever_Cat_Snail_Bb_Cream.jpg">
                           </div>
                           <div class="swiper-slide">
-                            <img src="http://vistaartrade.com/media/products/2021/12/29/Keratin_Moisturizing__Smooth_Creamy_Hair_Mask_500ml.jpg">
+                            <img src="https://vistaartrade.com/media/products/2021/12/29/Keratin_Moisturizing__Smooth_Creamy_Hair_Mask_500ml.jpg">
                           </div>
                   
                           </div>
@@ -1176,16 +1180,6 @@
     </script>
 
 
-<script>
-    var options = {
-strings: ['Orders.', 'New Orders.', 'More New Orders.'],
-typeSpeed: 150,
-backSpeed: 150,
-loop: true,
-};
-
-var typed = new Typed('.autotype', options);
-</script>
 
     <script>
         function toast_message() {
