--- a/templates/sanjog/index.html
+++ b/templates/sanjog/index.html
@@ -241,7 +241,7 @@
                                             <span class="ratings" style="width: 100%;"></span>
                                             <span class="tooltiptext tooltip-top"></span>
                                         </div>
-                                        <a href="categorypage.html" class="rating-reviews">(3 Reviews)</a>
+                                        <a # class="rating-reviews">(3 Reviews)</a>
                                     </div>
                                     {% if p.price != 0 %}
                                     <div class="product-price pl-3">
@@ -283,7 +283,7 @@
                                     <strong class="text-secondary">$125.00</strong>
                                 </div>
                                 <hr class="banner-divider bg-white" />
-                                <a href="shop-banner-sidebar.html"
+                                <a href="/"
                                     class="btn btn-white btn-link btn-underline btn-icon-right">
                                     Shop Now<i class="w-icon-long-arrow-right"></i></a>
                             </div-->
@@ -301,7 +301,7 @@
                                     <strong class="text-secondary">30% Off</strong>
                                 </div>
                                 <hr class="banner-divider bg-dark" />
-                                <a href="shop-banner-sidebar.html"
+                                <a href="/"
                                     class="btn btn-dark btn-link btn-underline btn-icon-right">
                                     Shop Now<i class="w-icon-long-arrow-right"></i></a>
                             </div-->
