--- a/templates/sanjog/trending_products.html
+++ b/templates/sanjog/trending_products.html
@@ -50,7 +50,7 @@ object-fit: cover;"/>
                                 <span class="ratings" style="width: 100%;"></span>
                                 <span class="tooltiptext tooltip-top"></span>
                             </div>
-                            <a href="categorypage.html" class="rating-reviews">(3 Reviews)</a>
+                            <a # class="rating-reviews">(3 Reviews)</a>
                         </div>
                         {% if p.price != 0 %}
                         <div class="product-price pl-3">
