--- a/templates/sanjog/category_page.html
+++ b/templates/sanjog/category_page.html
@@ -424,7 +424,7 @@ sewing machine
                         <div class="toolbox-right">
 
 
-                            <img src="{% static " assets/images/edit.png" %}" alt="" class="w-20 r90">
+                            <img src="{% static "assets/images/edit.png" %}" alt="" class="w-20 r90">
 
 
                             <div class="toolbox-item toolbox-sort select-box text-dark">
@@ -448,10 +448,10 @@ sewing machine
                                 </form>
                             </div>
                             <div class="toolbox-item toolbox-layout d-none">
-                                <a href="shop-banner-sidebar.html" class="icon-mode-grid btn-layout active">
+                                <a href="/" class="icon-mode-grid btn-layout active">
                                     <i class="w-icon-grid"></i>
                                 </a>
-                                <a href="shop-list.html" class="icon-mode-list btn-layout">
+                                <a href="#" class="icon-mode-list btn-layout">
                                     <i class="w-icon-list"></i>
                                 </a>
                             </div>
@@ -494,7 +494,7 @@ sewing machine
                                             <span class="ratings" style="width: 100%;"></span>
                                             <span class="tooltiptext tooltip-top"></span>
                                         </div>
-                                        <a href="categorypage.html" class="rating-reviews">(3 Reviews)</a>
+                                        <a # class="rating-reviews">(3 Reviews)</a>
                                     </div>
                                     {% if p.price != 0 %}
                                     <div class="product-price pl-3">
@@ -625,13 +625,13 @@ sewing machine
             <ul class="toolbar-grid m-0">
                 <li>
                     <a href="">
-                        <img src="assets/images/home.png" class="w-20" alt="Home">
+                        <img src="{% static "assets/images/home.png" %}" class="w-20" alt="Home">
                         <p class="m-0">Home</p>
                     </a>
                 </li>
                 <li data-toggle="modal" data-target="#myModal">
                     <a href="javascript:void(0)">
-                        <img src="assets/images/categories (1).png" class="w-20" alt="Categories">
+                        <img src="{% static "assets/images/categories (1).png" %}" class="w-20" alt="Categories">
                         <p class="m-0">Categories</p>
                     </a>
                 </li>
@@ -643,13 +643,13 @@ sewing machine
                 </li>
                 <li>
                     <a href="">
-                        <img src="assets/images/message.png" class="w-20" alt="Messages">
+                        <img src="{% static "assets/images/message.png" %}" class="w-20" alt="Messages">
                         <p class="m-0">Messages</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="assets/images/user (1).png" class="w-20" alt="Profile">
+                        <img src="{% static "assets/images/user (1).png" %}" class="w-20" alt="Profile">
                         <p class="m-0">Profile</p>
                     </a>
 
@@ -666,42 +666,35 @@ sewing machine
 {% block script %}
 
 <!-- Plugin JS File -->
-<script src="{% static " assets/vendor/jquery/jquery.min.js" %}"></script>
-<script src="{% static " assets/js/bootstrap.js" %}"></script>
-<script src="{% static " assets/vendor/jquery.plugin/jquery.plugin.min.js" %}"></script>
-<script src="{% static " assets/vendor/imagesloaded/imagesloaded.pkgd.min.js" %}"></script>
-<script src="{% static " assets/vendor/swiper/swiper-bundle.min.js" %}"></script>
-<script src="{% static " assets/vendor/jquery.countdown/jquery.countdown.min.js" %}"></script>
-<script src="{% static " assets/vendor/magnific-popup/jquery.magnific-popup.min.js" %}"></script>
-<script src="{% static " assets/vendor/floating-parallax/parallax.min.js" %}"></script>
-<script src="{% static " assets/vendor/zoom/jquery.zoom.js" %}"></script>
-<script src="{% static " assets/vendor/niceselect.js" %}"></script>
+<script src="{% static "assets/vendor/jquery/jquery.min.js" %}"></script>
+<script src="{% static "assets/js/bootstrap.js" %}"></script>
+<script src="{% static "assets/vendor/jquery.plugin/jquery.plugin.min.js" %}"></script>
+<script src="{% static "assets/vendor/imagesloaded/imagesloaded.pkgd.min.js" %}"></script>
+<script src="{% static "assets/vendor/swiper/swiper-bundle.min.js" %}"></script>
+<script src="{% static "assets/vendor/jquery.countdown/jquery.countdown.min.js" %}"></script>
+<script src="{% static "assets/vendor/magnific-popup/jquery.magnific-popup.min.js" %}"></script>
+<script src="{% static "assets/vendor/floating-parallax/parallax.min.js" %}"></script>
+<script src="{% static "assets/vendor/zoom/jquery.zoom.js" %}"></script>
+<script src="{% static "assets/vendor/niceselect.js" %}"></script>
 
-<script src="{% static " assets/js/datatable.js" %}"></script>
-<script src="{% static " assets/js/apexchart.js" %}"></script>
-<script src="{% static " assets/js/chartoption.js" %}"></script>
-<script src="{% static " assets/js/popper.min.js" %}"></script>
-<script src="{% static " assets/js/lunar.js" %}"></script>
-<script src="{% static " assets/js/main.js" %}"></script>
+<script src="{% static "assets/js/datatable.js" %}"></script>
+<script src="{% static "assets/js/apexchart.js" %}"></script>
+<script src="{% static "assets/js/chartoption.js" %}"></script>
+<script src="{% static "assets/js/popper.min.js" %}"></script>
+<script src="{% static "assets/js/lunar.js" %}"></script>
+<script src="{% static "assets/js/main.js" %}"></script>
 
 
 
 <!-- Main Js -->
-<script src="{% static " assets/js/main.min.js" %}"></script>
-<script src="{% static " js2/active.js" %}"></script>
+<script src="{% static "assets/js/main.min.js" %}"></script>
+<script src="{% static "js2/active.js" %}"></script>
 
 <script>
     $(document).ready(function () {
         $('select').niceSelect();
     });
 </script>
-<script>
-    $(function () {
-        $("#header").load("header.html");
-        $("#footer").load("footer.html");
-    });
-</script>
-
 
 <script>
     let rangeMin = 100;
