--- a/templates/sanjog/emailforgotpassword.html
+++ b/templates/sanjog/emailforgotpassword.html
@@ -44,6 +44,7 @@ body {
     height: 100% !important;
     width: 100% !important;
     background: #f1f1f1;
+    font-family: 'Lato' !important;
 }
 
 /* What it does: Stops email clients resizing small text. */
@@ -167,6 +168,8 @@ img.g-img + div {
 	border-radius: 5px;
 	background: #00917C;
 	color: #ffffff;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 .btn.btn-white{
 	border-radius: 5px;
@@ -366,19 +369,40 @@ ul.social li{
 </td>
 </tr>
 <tr>
-<td valign="middle" class="hero bg_white" style="padding: 3em 0 2em 0;">
-<img src="static/assets/images/emailone.svg" alt="" style="width: 300px; max-width: 600px; height: auto; margin: auto; display: block;">
-</td>
+<td valign="middle" class="hero bg_white" style="    padding: 3em 0 3em 0;
+    background: #00917C;
+    text-align: center;
+    color: white;">
+    <img src="static/assets/images/password.png" alt="" style="width: 40px; max-width: 50px; height: auto; margin: auto; display: block;">
+
+
+    <h4 style="    color: white;
+    margin: 0; margin-top: 10px;
+    font-size: 25px;">Forgot Your Password?</h4></td>
 </tr>
 <tr>
-<td valign="middle" class="hero bg_white" style="padding: 2em 0 4em 0;">
+<td valign="middle" class="hero bg_white" style="padding: 2em 0 2em 0;">
 <table>
 <tr>
 <td>
- <div class="text" style="padding: 0 2.5em; text-align: center;">
-<h2>Hello!</h2>
-<h3>I am SUPPLIER NAME from Vistaartrade.com. I received your enquiry regarding PRODUCT</h3>
-<p><a href="#" class="btn btn-primary">View Details</a></p>
+ <div class="text" style="padding: 0 2.5em; text-align: left;">
+<h2 style="font-size: 17px;">Dear {% if user.get_full_name %}{{ user.get_full_name }}{% else %}{{ user }}{% endif %},</h2>
+<h3 style="font-size: 17px; margin-top: 15px; font-weight: 500;">If you've lost your password and wish to reset it, use the link below to get started.
+</h3>
+
+
+<p><a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}" class="btn btn-primary">Reset Your Password</a></p>
+<h3 style="font-size: 17px; margin-top: 15px; font-weight: 500;">Thank you for your cooperation in this matter. If you have any questions or concerns, please do not hesitate to contact our customer support team at +977980-7209802
+</h3>
+
+<h3 style="font-size: 17px; margin-top: 15px; font-weight: 500;">
+    Best regards, <br>
+    The Vistaar Trade Team
+</h3>
+
+
+
+
 </div>
 </td>
 </tr>
