--- a/templates/sanjog/emailverify.html
+++ b/templates/sanjog/emailverify.html
@@ -44,6 +44,7 @@ body {
     height: 100% !important;
     width: 100% !important;
     background: #f1f1f1;
+    font-family: 'Lato' !important;
 }
 
 /* What it does: Stops email clients resizing small text. */
@@ -167,6 +168,8 @@ img.g-img + div {
 	border-radius: 5px;
 	background: #00917C;
 	color: #ffffff;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 .btn.btn-white{
 	border-radius: 5px;
@@ -366,19 +369,45 @@ ul.social li{
 </td>
 </tr>
 <tr>
-<td valign="middle" class="hero bg_white" style="padding: 3em 0 2em 0;">
-<img src="static/assets/images/emailone.svg" alt="" style="width: 300px; max-width: 600px; height: auto; margin: auto; display: block;">
-</td>
+<td valign="middle" class="hero bg_white" style="    padding: 3em 0 3em 0;
+    background: #00917C;
+    text-align: center;
+    color: white;">
+    <img src="static/assets/images/email.png" alt="" style="width: 40px; max-width: 50px; height: auto; margin: auto; display: block;">
+
+    <p style="    margin: 0; margin-top: 10px; letter-spacing: 2px;">
+    THANKS FOR SIGNING UP!
+    </p>
+    <h4 style="    color: white;
+    margin: 0;
+    font-size: 25px;">Verify Your Email Address.</h4></td>
 </tr>
 <tr>
-<td valign="middle" class="hero bg_white" style="padding: 2em 0 4em 0;">
+<td valign="middle" class="hero bg_white" style="padding: 2em 0 2em 0;">
 <table>
 <tr>
 <td>
- <div class="text" style="padding: 0 2.5em; text-align: center;">
-<h2>Hello!</h2>
-<h3>I am SUPPLIER NAME from Vistaartrade.com. I received your enquiry regarding PRODUCT</h3>
-<p><a href="#" class="btn btn-primary">View Details</a></p>
+ <div class="text" style="padding: 0 2.5em; text-align: left;">
+<h2 style="font-size: 17px;">Dear {{ user.username }},</h2>
+<h3 style="font-size: 17px; margin-top: 15px; font-weight: 500;">We hope this email finds you well. We at Vistaar Trade are committed to providing a safe and secure platform for all our users. As a part of our security measures, we require all users to verify their email address.
+</h3>
+<h3 style="font-size: 17px; margin-top: 15px; font-weight: 500;">To complete the verification process, please click on the following link:
+
+</h3>
+
+<p><a href="https://{{domain}}{% url 'activate' uidb64=uid token=token %}" class="btn btn-primary">Verify Here</a></p>
+
+<h3 style="font-size: 17px; margin-top: 15px; font-weight: 500;">Thank you for your cooperation in this matter. If you have any questions or concerns, please do not hesitate to contact our customer support team at +977980-7209802
+</h3>
+
+<h3 style="font-size: 17px; margin-top: 15px; font-weight: 500;">
+    Best regards, <br>
+    The Vistaar Trade Team
+</h3>
+
+
+
+
 </div>
 </td>
 </tr>
