--- a/templates/sanjog/sellerpage_ajax.html
+++ b/templates/sanjog/sellerpage_ajax.html
@@ -139,9 +139,9 @@
 
     </div>
 
-    <div class="container pt-5 sellercontainer">
+    <div class="container pt-5 sellercontainer"> 
 
-        <div class="row">
+        <div class="row"> 
             <div class="col-lg-3">
                 <aside class="sidebar shop-sidebar sticky-sidebar-wrapper sidebar-fixed">
                     <!-- Start of Sidebar Overlay -->
@@ -156,38 +156,7 @@
                                 <label>Filter :</label>
                             </div>
 
-                            <form method="GET">
-                                <input type="hidden" name="keyword" value="{{keyword}}">
-                                <input type="hidden" name="sort" value="{{sort}}">
-                                {% for subcat in selected_subcats %}
-                                <input type="hidden" name="sub_categ" value="{{subcat}}">
-                                {% endfor %}
-                                {% for brand in selected_brands %}
-                                <input type="hidden" name="brand" value="{{brand}}">
-                                {% endfor %}
-                                <div class="range">
-                                    <div class="range-slider">
-                                      <span class="range-selected"></span>
-                                    </div>
-                                    <div class="range-input">
-                                      <input type="range" class="min" min="0" max="1000" value="{{min_price_of_all_products}}" step="10">
-                                      <input type="range" class="max" min="0" max="1000" value="{{max_price_of_all_products}}" step="10">
-                                    </div>
-                                    <div class="range-price d-flex align-items-center ">  
-                                        <div class="mr-2 mt-3">
-                                      <label for="min">Min</label>
-                                      <input type="number" class="w-100 form-control mr-2" name="min_value" value="{{min_price_of_all_products}}">      
-                                    </div>    
-                                    <div class="mt-3">
-                                      <label for="max">Max</label>
-                                      <input type="number" class="w-100 form-control" name="max_value" value="{{max_price_of_all_products}}">      
-                                    </div>
-                                    </div>
-                                  </div>
-                                <button
-                                    class="btn btn-outline-green btn-filter-green btn-border-green mx-auto d-block mt-3 w-100"
-                                    type="submit">Filter</button>
-                            </form>
+                 
 
                             <!-- Start of Collapsible widget -->
                             <div class="widget widget-collapsible mt-4">
@@ -216,11 +185,11 @@
                                     </form>
                                 </ul> 
                             </div>
-                            <!--div class="widget widget-collapsible mt-4">
+                            <div class="widget widget-collapsible mt-4">
                                 <h3 class="widget-title text-dark"><label>Brands</label>
                                     <span class="toggle-btn"></span>
                                 </h3>
-                                <ul class="widget-body asdas filter-items item-check mt-1{% if category|length > 5 %} more-than-five-categories{% endif %}">
+                                <ul class="widget-body filter-items item-check mt-1{% if all_brands|length > 5 %} more-than-five-categories{% endif %}">
 
                                     <form method="GET" class="mb-3" onSubmit="return disableNullFields(this);">
                                         <input type="hidden" name="keyword" value="{{keyword}}">
@@ -242,7 +211,7 @@
                                 <button class="btn btn-outline-green btn-filter-green btn-border-green mx-auto d-block mt-3 w-100" type="submit">Filter</button>
                                     </form>
                                 </ul> 
-                            </div-->
+                            </div>
                             <!-- End of Collapsible Widget -->
                             <!-- Start of Collapsible Widget -->
 
@@ -255,6 +224,95 @@
                     <!-- End of Sidebar Content -->
                 </aside>
             </div>
+
+            <div class="aiz-sidebar-wrapthree" style="    position: absolute;">
+                <div class="aiz-sidebarthree left c-scrollbar">
+              
+                    <div class="aiz-side-nav-wrapthree" >
+
+                        <aside class="sidebar shop-sidebar sticky-sidebar-wrapper sidebar-fixed">
+                            <!-- Start of Sidebar Overlay -->
+                            <div class="sidebar-overlay"></div>
+                            <a class="sidebar-close" href="#"><i class="close-icon"></i></a>
+
+                            <div class="filter-actions mb-3">
+                                <label>Filter :</label>
+            
+                                <a class="fw-500">Reset Filter</a>
+            
+                            </div>
+
+                     
+
+                            <!-- Start of Collapsible widget -->
+                            <div class="widget widget-collapsible mt-4">
+                                <h3 class="widget-title text-dark"><label>Sub Categories</label>
+                                    <span class="toggle-btn"></span>
+                                </h3>
+                                <ul class="widget-body asdas filter-items item-check mt-1{% if all_subcategories|length > 5 %} more-than-five-categories{% endif %}">
+
+                                    <form method="GET" class="mb-3" onSubmit="return disableNullFields(this);">
+                                        <input type="hidden" name="keyword" value="{{keyword}}">
+                                        <input type="hidden" name="min_value" value="{{min_value}}">
+                                        <input type="hidden" name="max_value" value="{{max_value}}">
+                                        <input type="hidden" name="sort" value="{{sort}}">
+                                        {% for brand in selected_brands %}
+                                        <input type="hidden" name="brand" value="{{brand}}">
+                                        {% endfor %}
+                                        {% for c in all_subcategories %}
+                                        <li><label class="checkbox">{{c}}
+                                            <input name="sub_categ" value="{{c.slug}}" type="checkbox" 
+                                            {% if c.slug in selected_subcats %} checked {% endif %}
+                                            />
+                                            <span class="checkmark" />
+                                        </label></li>
+                                        {% endfor %}
+                                        <button class="btn btn-outline-green btn-filter-green btn-border-green mx-auto d-block mt-3 w-100" type="submit">Filter</button>
+
+                                    </form>
+                                </ul> 
+
+                            </div>
+                            <div class="widget widget-collapsible mt-4">
+                                <h3 class="widget-title text-dark"><label>Brands</label>
+                                    <span class="toggle-btn"></span>
+                                </h3>
+                                <ul class="widget-body asdas filter-items item-check mt-1{% if all_brands|length > 5 %} more-than-five-categories{% endif %}">
+
+                                    <form method="GET" class="mb-3" onSubmit="return disableNullFields(this);">
+                                        <input type="hidden" name="keyword" value="{{keyword}}">
+                                        <input type="hidden" name="min_value" value="{{min_value}}">
+                                        <input type="hidden" name="max_value" value="{{max_value}}">
+                                        <input type="hidden" name="sort" value="{{sort}}">
+                                        {% for subcat in selected_subcats %}
+                                        <input type="hidden" name="sub_categ" value="{{subcat}}">
+                                        {% endfor %}
+
+                                        {% for b in all_brands %}
+                                        <li><label class="checkbox">{{b}}
+                                            <input name="brand" value="{{b}}" type="checkbox" 
+                                            {% if b in selected_brands %} checked {% endif %}
+                                            />
+                                            <span class="checkmark" />
+                                        </label></li>
+                                        {% endfor %}
+                                        <button class="btn btn-outline-green btn-filter-green btn-border-green mx-auto d-block mt-3 w-100" type="submit">Filter</button>
+
+                                    </form>
+
+                                </ul> 
+
+                            </div>
+        
+                       
+                        </aside>
+            
+                 
+                  
+                    </div>
+                </div><!-- .aiz-sidebar -->
+                <div class="aiz-sidebar-overlaythree"></div>
+                </div>
 
             <div class="col-lg-9" style="padding: 0;">
 
@@ -304,6 +362,19 @@
                                         Products</button>
                                 </form>
                             </li>
+
+                            <button class="aiz-mobile-togglerthree" style="    background: unset;
+                            width: 25px;
+                            position: absolute;
+                            right: 45px;
+                            top: 70px;
+                            display: flex;
+                            align-items: center;">
+                                <img style="width: 20px;" src="{% static "assets/images/filternow.png" %}" alt="" style="width: 20px;"/>
+                                <p style="    margin-bottom: 0;
+                                margin-left: 5px;
+                                color: #00917c;">Filter</p>
+                            </button> 
                         </ul>
 
 
@@ -342,7 +413,7 @@
                     <span class="ratings" style="width: 100%;"></span>
                     <span class="tooltiptext tooltip-top"></span>
                 </div>
-                <a href="categorypage.html" class="rating-reviews">(3 Reviews)</a>
+                <a # class="rating-reviews">(3 Reviews)</a>
             </div>
             {% if p.price != 0 %}
             <div class="product-price pl-3">
@@ -395,42 +466,37 @@
 {% block script %}
 
 <!-- Plugin JS File -->
-<script src="assets/vendor/jquery/jquery.min.js"></script>
-<script src="assets/js/bootstrap.js"></script>
-<script src="assets/vendor/jquery.plugin/jquery.plugin.min.js"></script>
-<script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="assets/vendor/jquery.countdown/jquery.countdown.min.js"></script>
-<script src="assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-<script src="assets/vendor/floating-parallax/parallax.min.js"></script>
-<script src="assets/vendor/zoom/jquery.zoom.js"></script>
-<script src="assets/vendor/niceselect.js"></script>
+<script src="/static/assets/vendor/jquery/jquery.min.js"></script>
+<script src="/static/assets/js/bootstrap.js"></script>
+<script src="/static/assets/vendor/jquery.plugin/jquery.plugin.min.js"></script>
+<script src="/static/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+<script src="/static/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="/static/assets/vendor/jquery.countdown/jquery.countdown.min.js"></script>
+<script src="/static/assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="/static/assets/vendor/floating-parallax/parallax.min.js"></script>
+<script src="/static/assets/vendor/zoom/jquery.zoom.js"></script>
+<script src="/static/assets/vendor/niceselect.js"></script>
 
-<script src="assets/js/datatable.js"></script>
-<script src="assets/js/apexchart.js"></script>
-<script src="assets/js/chartoption.js"></script>
-<script src="assets/js/popper.min.js"></script>
-<script src="assets/js/lunar.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="/static/assets/js/datatable.js"></script>
+<script src="/static/assets/js/apexchart.js"></script>
+<script src="/static/assets/js/chartoption.js"></script>
+<script src="/static/assets/js/popper.min.js"></script>
+<script src="/static/assets/js/lunar.js"></script>
+<script src="/static/assets/js/main.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
 
 
 <!-- Main Js -->
-<script src="assets/js/main.min.js"></script>
+<script src="{% static "assets/js/main.min.js" %}"></script>
 
 <script>
     $(document).ready(function () {
         $('select').niceSelect();
     });
 </script>
-<script>
-    $(function () {
-        $("#header").load("header.html");
-        $("#footer").load("footer.html");
-    });
-</script>
+
 
 <script>
     $(document).ready(function () {
@@ -611,7 +677,20 @@
         url = "https://web.whatsapp.com/send?text=" + pageUrl + "&text=" + pageTitle + " " + pageUrl;
         socialWindow(url);
     })
-    </script>
+    </script> 
+
+<script>
+
+    $('.aiz-mobile-togglerthree').click(function(){
+      $('body').addClass('side-menu-openthree');
+      $('body').addClass('bodyhidden');
+    })
+  
+    $('.aiz-sidebar-overlaythree').click(function(){
+      $('body').removeClass('side-menu-openthree');
+      $('body').removeClass('bodyhidden');
+    })
+  </script>
 
 {% endblock %}
 </body>
