--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -9850,3 +9850,41 @@ padding: 10px !important;
 .bodyhidden{
   overflow:hidden;
 }
+
+.mySwiper .swiper-pagination-bullets .swiper-pagination-bullet {
+  background: white;
+}
+
+.featured_title{
+  position: relative;
+}
+
+.featured_title::before{
+  position: absolute;
+  content: '';
+  width: 12px;
+  height: 12px;
+  background-color: white;
+  left: -10%;
+  top: 48%;
+  transform: translateY(-50%);
+  transform: rotate(45deg);
+}
+
+.featured_title::after{
+  position: absolute;
+  content: '';
+  width: 12px;
+  height: 12px;
+  background-color: white;
+  right: -10%;
+  top: 48%;
+  transform: translateY(-50%);
+  transform: rotate(45deg);
+}
+
+@media(max-width:600px){
+  .filter .search-form {
+    margin-bottom: 0;
+}
+}
