--- a/templates/sanjog/category_page.html
+++ b/templates/sanjog/category_page.html
@@ -122,7 +122,7 @@ sewing machine
   
         <div class="aiz-side-nav-wraptwo">
 
-            <div class="sticky-sidebar">
+            <div class="sticky-sidebar ">
                 <div class="filter-actions mb-3">
                     <label>Filter :</label>
 
@@ -174,7 +174,7 @@ sewing machine
                         <span class="toggle-btn"></span>
                     </h3>
                     <ul
-                        class="widget-body asdass filter-items item-check mt-1{% if subcategory|length > 5 %} more-than-five-categories{% endif %}">
+                        class="widget-body asdass filter-items item-check mt-1">
 
                         <form method="GET" class="mb-3" onSubmit="return disableNullFields(this);">
                             <input type="hidden" name="keyword" value="{{keyword}}">
@@ -183,6 +183,7 @@ sewing machine
                             <input type="hidden" name="sort" value="{{sort}}">
                             <input type="hidden" name="sub_categ" value="{{c.slug}}">
 
+                            <div class="{% if subcategory|length > 5 %} more-than-five-categories{% endif %}">
                             {% for c in subcategory %}
                             <li><label class="checkbox">{{c}}
                                     <input name="sub_categ" type="radio" {% if c == current_category %} checked
@@ -190,6 +191,7 @@ sewing machine
                                     <span class="checkmark" />
                                 </label></li>
                             {% endfor %}
+                        </div>
                             <button
                         class="btn btn-outline-green btn-filter-green btn-border-green mx-auto d-block mt-3 w-100"
                         type="submit">Filter</button>
@@ -229,11 +231,30 @@ sewing machine
                     </h3>
 
                     <ul
-                        class="widget-body filter-items search-ul {% if supplier|length > 5 %} more-than-five-categories{% endif %}">
+                    class="widget-body filter-items search-ul ">
+                    <form method="GET" class="mb-3" onSubmit="return disableNullFields(this);">
+                        <input type="hidden" name="keyword" value="{{keyword}}">
+                        <input type="hidden" name="min_value" value="{{min_value}}">
+                        <input type="hidden" name="max_value" value="{{max_value}}">
+                        <input type="hidden" name="sort" value="{{sort}}">
+                        <input type="hidden" name="sub_categ" value="{{c.slug}}">
+
+                        <div class="{% if supplier|length > 5 %} more-than-five-categories{% endif %}">
                         {% for s in supplier %}
-                        <li><a href="#">{{s}}</a></li>
+                        <li><label class="checkbox">{{s}}
+                                <input name="supplier" type="{% if subcategory|length > 1 %}radio{% else %}checkbox{% endif %}" {% if s == current_supplier %} checked
+                                    {% endif %} value="{{ s.slug}}" />
+                                <span class="checkmark" />
+                            </label></li>
                         {% endfor %}
-                    </ul>
+                    </div>
+                        <button
+                    class="btn btn-outline-green btn-filter-green btn-border-green mx-auto d-block mt-3 w-100"
+                    type="submit">Filter</button>
+                    </form>
+                </ul>
+
+              
                 </div>
 
                 <!-- Start of Collapsible Widget -->
@@ -265,11 +286,7 @@ sewing machine
     <div class="page-content">
         <div class="container">
             <!-- Start of Shop Banner -->
-
             <!-- End of Shop Banner -->
-
-
-
             <!-- Start of Shop Content -->
             <div class="shop-content row gutter-lg mb-10">
                 <!-- Start of Sidebar, Shop Sidebar -->
@@ -390,7 +407,7 @@ sewing machine
                                 </h3>
 
                                 <ul
-                                    class="widget-body filter-items search-ul {% if supplier|length > 5 %} more-than-five-categories{% endif %}">
+                                    class="widget-body filter-items search-ul ">
                                     <form method="GET" class="mb-3" onSubmit="return disableNullFields(this);">
                                         <input type="hidden" name="keyword" value="{{keyword}}">
                                         <input type="hidden" name="min_value" value="{{min_value}}">
@@ -398,6 +415,7 @@ sewing machine
                                         <input type="hidden" name="sort" value="{{sort}}">
                                         <input type="hidden" name="sub_categ" value="{{c.slug}}">
 
+                                        <div class="{% if supplier|length > 5 %} more-than-five-categories{% endif %}">
                                         {% for s in supplier %}
                                         <li><label class="checkbox">{{s}}
                                                 <input name="supplier" type="{% if subcategory|length > 1 %}radio{% else %}checkbox{% endif %}" {% if s == current_supplier %} checked
@@ -405,6 +423,7 @@ sewing machine
                                                 <span class="checkmark" />
                                             </label></li>
                                         {% endfor %}
+                                    </div>
                                         <button
                                     class="btn btn-outline-green btn-filter-green btn-border-green mx-auto d-block mt-3 w-100"
                                     type="submit">Filter</button>
