Added reset filters button in category and search page

--- a/templates/sanjog/category_page.html
+++ b/templates/sanjog/category_page.html
@@ -302,7 +302,7 @@ sewing machine
                             <div class="filter-actions mb-3">
                                 <label>Filter :</label>
 
-                                <a class="fw-500">Reset Filter</a>
+                                <a class="fw-500 {% if not has_filters_applied %}d-none{% endif %}" href=".">Reset Filter</a>
 
                             </div>
 
