--- a/templates/sanjog/searchpage.html
+++ b/templates/sanjog/searchpage.html
@@ -60,7 +60,7 @@ function disableNullFieldsAndSubmit(form) {
                             <div class="filter-actions mb-3">
                                 <label>Filter :</label>
 
-                                <a class="fw-500">Reset Filter</a>
+                                <a class="fw-500 {% if not has_filters_applied %}d-none{% endif %}" href="?keyword={{keyword}}">Reset Filter</a>
 
                             </div>
 
